[package]
authors = ["Zeyla Hellyer <hi@zeyla.me>"]
description = "A simple yet effective bucket implementation for Rust."
documentation = "https://docs.rs/hikari"
homepage = "https://github.com/zeyla/hikari"
license = "ISC"
name = "hikari"
readme = "README.md"
repository = "https://github.com/zeyla/hikari.git"
version = "0.1.0"

[badges.maintenance]
status = "actively-developed"

[dependencies.futures]
optional = true
version = "~0.1"

[dependencies.tokio-timer]
optional = true
version = "~0.1"

[features]
default = ["future-support"]
future-support = ["futures", "tokio-timer"]
