[package]
authors = ["Zeyla Hellyer <hi@zeyla.me>"]
description = "Simple and effective ratelimiting implementation"
documentation = "https://docs.rs/rl"
homepage = "https://github.com/zeyla/rl"
license = "ISC"
name = "rl"
readme = "README.md"
repository = "https://github.com/zeyla/rl.git"
version = "0.1.0"

[badges.maintenance]
status = "actively-developed"

[dependencies.futures]
optional = true
version = "~0.1"

[dependencies.tokio-timer]
optional = true
version = "~0.1"

[features]
default = ["future-support"]
future-support = ["futures", "tokio-timer"]
