[package]
authors = ["Zeyla Hellyer <hi@zeyla.me>"]
description = "Simple and effective ratelimiting implementation"
documentation = "https://docs.rs/rl"
homepage = "https://github.com/rusty-crates/rl"
license = "ISC"
name = "rl"
publish = false
readme = "README.md"
repository = "https://github.com/rusty-crates/rl.git"
version = "0.1.0"

[badges.maintenance]
status = "actively-developed"

[dependencies.futures]
optional = true
version = "0.1"

[dependencies.tokio-timer]
optional = true
version = "0.2"

[features]
default = ["future-support"]
future-support = ["futures", "tokio-timer"]
